--- a/css/styles.css
+++ b/css/styles.css
@@ -530,7 +530,7 @@ a{
 .sec05-img1{
     width: 100%;
     height: 400px;
-    background-image: url('../images/한식당.jpg');
+    background-image: url('../images/hansik.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -539,7 +539,7 @@ a{
 .sec05-img2{
     width: 100%;
     height: 400px;
-    background-image: url('../images/전주.jpg');
+    background-image: url('../images/jeonju.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -548,7 +548,7 @@ a{
 .sec05-img3{
     width: 100%;
     height: 400px;
-    background-image: url('../images/뚝배기.jpg');
+    background-image: url('../images/dookbeagi.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -557,7 +557,7 @@ a{
 .sec05-img4{
     width: 100%;
     height: 400px;
-    background-image: url('../images/두부.jpg');
+    background-image: url('../images/dooboo.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -566,7 +566,7 @@ a{
 .sec05-img5{
     width: 100%;
     height: 400px;
-    background-image: url('../images/청기.jpg');
+    background-image: url('../images/chungi.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -575,7 +575,7 @@ a{
 .sec05-img6{
     width: 100%;
     height: 400px;
-    background-image: url('../images/짬뽕.jpg');
+    background-image: url('../images/zzambbong.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
