--- a/css/styles.css
+++ b/css/styles.css
@@ -721,6 +721,12 @@ footer{
 }
 
 /* 반응형 */
+@media(max-width: 1453px){
+    .sec02-lbox p{
+        font-size: 16px;
+    }
+}
+
 @media(max-width: 1000px){
     .sec02-lbox p {
         width: 100%;
@@ -783,9 +789,271 @@ footer{
     }
 }
 
-@media(min-width: 767px){
-    .sub-menu li a{
+@media(max-width: 768px){
+    .section1{
+        height: 750px;
+    }
+    .sec01-bg{
+        height: 600px;
+    }
+    .logo{
+        color: #333;
+    }
+    .main-menu{
         display: none;
+    }
+    .sub-menu{
+        width: 100%;
+        height: 320px;
+        display: none;
+        text-align: center;
+        background: rgba(0,0,0,0.9);
+        z-index: 2;
+        position: absolute;
+        top: 50px;
+    }
+    .sub-menu li{
+        height: 80px;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 80px;
+    }
+    .sub-menu li a{
+        color: #fff;
+        display: block;
+    }
+    .nav.sticky ul li a {
+        color: #fff;
+    }
+    .nav{
+        padding: 10px 0;
+        background: #fff;
+    }
+    .nav.sticky{
+        padding: 15px 0;
+    }
+    .xi-bars{
+        color: #333;
+        display: flex;
+        font-size: 30px;
+        cursor: pointer;
+        z-index: 8;
+    }
+    .sec01-title{
+        top: 240px;
+    }
+    .sec01-title h1{
+        font-size: 34px;
+    }
+    .sec01-title p{
+        font-size: 14px;
+        font-weight: 300;
+        padding: 15px;
+    }
+    .section2{
+        height: 850px;
+    }
+    .sec02-lbox{
+        width: 80%;
+        height: 350px;
+        top: 430px;
+        left: 10%;
+        padding: 0;
+    }
+    .sec02-lbox h1{
+        font-size: 16px;
+        margin-top: 15px;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+    }
+    .sec02-rbox{
+        width: 80%;
+        height: 350px;
+        top: 58px;
+        left: 10%;
+    }
+    .sec02-lbox p{
+        width: 90%;
+        font-size: 15px;
+        line-height: 25px;
+        position: absolute;
+        top: 60px;
+        left: 30px;
+    }
+    .section3{
+        display: block;
+        margin: 0;
+    }
+    .sec03-wrap{
+        width: 90%;
+        margin: 100px auto;
+    }
+    .sec03-lline{
+        width: 35%;
+    }
+    .sec03-rline{
+        width: 35%;
+    }
+    .sec03-title h1{
+        font-size: 18px;
+    }
+    .sec03-title{
+        margin-bottom: 50px;
+    }
+    .sec03-title span{
+        font-size: 18px;
+    }
+    .sec03-btn{
+        width: 90%;
+        margin-top: 0;
+        flex-wrap: wrap;
+    }
+    .sec03-btn1{
+        width: 48%;
+        height: 50px;
+    }
+    .sec03-btn1 p{
+        font-size: 14px;
+        line-height: 50px;
+    }
+    .sec03-btn1:hover{
+        letter-spacing: 0;
+    }
+    .sec03-btn2{
+        width: 48%;
+        height: 50px;
+    }
+    .sec03-btn2 p{
+        font-size: 14px;
+        line-height: 50px;
+    }
+    .sec03-btn2:hover{
+        letter-spacing: 0;
+    }
+    .sec03-btn3{
+        width: 48%;
+        height: 50px;
+        margin-top: 10px;
+    }
+    .sec03-btn3 p{
+        font-size: 14px;
+        line-height: 50px;
+    }
+    .sec03-btn3:hover{
+        letter-spacing: 0;
+    }
+    .sec03-btn4{
+        width: 48%;
+        height: 50px;
+        margin-top: 10px;
+    }
+    .sec03-btn4 p{
+        font-size: 14px;
+        line-height: 50px;
+    }
+    .sec03-btn4:hover{
+        letter-spacing: 0;
+    }
+    .sec03-content{
+        width: 90%;
+        display: block;
+    }
+    .sec03-img{
+        width: 100%;
+        height: 250px;
+    }
+    .sec03-content-text{
+        width: 100%;
+        height: 0px;
+    }
+    .sec03-content-text p{
+        display: none;
+    }
+    .section4{
+        height: 200px;
+    }
+    .section4 h1{
+        font-size: 22px;
+        line-height: 50px;
+    }
+    .section4 p{
+        font-size: 13px;
+        font-weight: 300;
+    }
+    .section5{
+        margin: 100px 0;
+    }
+    .sec05-title{
+        width: 80%;
+        margin: 0;
+        padding-bottom: 50px;
+    }
+    .sec05-title h1{
+        font-size: 18px;
+    }
+    .sec05-title span{
+        font-size: 18px;
+    }
+    .sec05-line{
+        width: 75%;
+    }
+    .sec05-slider-text h1{
+        font-size: 18px;
+    }
+    .sec05-slider-text p{
+        font-size: 14px;
+        line-height: 22px;
+    }
+    .sec05-slider-text{
+        margin: 20px 0;
+    }
+    .hover5:hover .black{
+        text-align: center;
+    }
+    .hover5, .black{
+        height: 300px;
+    }
+    .black01{
+        font-size: 16px;
+    }
+    .sec05-img1{
+        height: 300px;
+    }
+    .sec05-img2{
+        height: 300px;
+    }
+    .sec05-img3{
+        height: 300px;
+    }
+    .sec05-img4{
+        height: 300px;
+    }
+    .sec05-img5{
+        height: 300px;
+    }
+    .sec05-img6{
+        height: 300px;
+    }
+    .swiper-button-next, .swiper-button-prev{
+        display: none;
+    }
+    .sec06-title{
+        margin-bottom: 50px;
+    }
+    .sec06-title h1{
+        font-size: 18px;
+    }
+    .sec06-title span{
+        font-size: 18px;
+    }
+    .sec06-line{
+        width: 82%;
+    }
+    #map{
+        width: 80%;
+        height: 310px;
+        margin: 0 auto;
     }
 }
 
@@ -810,7 +1078,7 @@ footer{
         background: rgba(0,0,0,0.9);
         z-index: 2;
         position: absolute;
-        top: 60px;
+        top: 50px;
     }
     .sub-menu li{
         height: 80px;
@@ -1054,5 +1322,39 @@ footer{
         width: 80%;
         height: 310px;
         margin: 0 auto;
+    }
+}
+
+@media(max-width: 360px){
+    .sec02-lbox p{
+        line-height: 23px;
+    }
+}
+
+@media(max-width: 320px){
+    .sec01-title h1{
+        font-size: 26px;
+    }
+    .sec01-title p{
+        font-size: 13px;
+    }
+    .sec02-lbox p{
+        line-height: 21px;
+        font-size: 13px;
+    }
+    .sec03-lline{
+        width: 25%;
+    }
+    .sec03-rline{
+        width: 25%;
+    }
+    .sec05-line{
+        width: 45%;
+    }
+    .swiper-pagination{
+        display: none;
+    }
+    .sec06-line{
+        width: 65%;
     }
 }
